# intrphysycom

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  PREREQUISITI.md  README.md  appveyor.yml  build.ps1  build.sh  intrphysycom.sln  makefile
2NPuntiSfera/: 2NPuntiSfera.vcxproj
FrameLight/: FrameLight.vcxproj  FrameLight.vcxproj.filters  Frame_1.cpp  Frame_1.h  Main.cpp  draw.cpp  draw.h  form.cpp  form.h  makefile
FrameVuoto/: Frame.cpp  Frame.h  Main.cpp  draw.cpp  draw.h  form.cpp  form.h  includes.h  stdafx.h
NPuntiSfera/: Frame_1.cpp  Frame_1.h  Main.cpp  Main.h  avanza.cpp  avanza.h  def.h  draw.cpp  draw.h  form.cpp  form.h  messaggi.cpp  texture_jpg.cpp
ODE_exponential/: ODE_exponential.vcxproj  exp.cpp  includes.h  main_0.cpp
ODE_oscillator/: ODE_oscillator.vcxproj  main.cpp
ODE_oscillator_3D/: classi.cpp  classi.h  includes.h  main.cpp  stdafx.h
PDE_Gottlieb/: EqOnde.cpp  Frame_1.cpp  Frame_1.h  Main.cpp  PDE_Gottlieb.vcxproj  dati.h  draw.cpp  form.cpp  utili.cpp  utili.h
PDE_KDV/: Frame_1.h  KDV.cpp  Main.cpp  PDE_KDV.vcxproj  draw.cpp  draw.h  form.h  guicon.cpp  guicon.h
PDE_waves/: EqOnde.cpp  PDE_waves.vcxproj  draw.cpp  draw.h  form.cpp
cmake/: four1.patch  realft.patch
cmake/Modules/: FindFLTK.cmake  FindNR3.cmake
docs/: EqCalore.tex  EqLaplace.tex  EqOnde.tex  colori.tex  esponenziale.tex  oscillatore.tex
patch/: four1.patch  realft.patch
src/FrameLight/: Frame_1.cpp  Frame_1.h  Main.cpp  draw.cpp  draw.h  form.cpp  form.h
src/FrameVuoto/: Frame.cpp  Frame.h  Main.cpp  draw.cpp  form.cpp  form.h  includes.h
src/NPuntiSfera/: Frame_1.cpp  Frame_1.h  Main.cpp  Main.h  avanza.cpp  avanza.h  def.h  draw.cpp  draw.h  form.cpp  form.h  messaggi.cpp  texture_jpg.cpp
src/ODE_esponenziale/: exp.cpp  includes.h
src/ODE_oscillatore/: main.cpp
src/ODE_oscillatore_3D/: classi.cpp  classi.h  includes.h  main.cpp
src/PDE_EqCalore/: EqCalore.cpp  Frame.cpp  Frame.h  Main.cpp  draw.cpp  draw.h  form.cpp  form.h
src/PDE_EqLaplace/: EqLaplace.cpp  EqLaplace.h  Frame.cpp  Frame.h  MainConsole.cpp  MainGrafica.cpp  dati.h  draw.cpp  draw.h  form.cpp  form.h
src/PDE_EqOnde/: EqOnde.cpp  draw.cpp  form.h
src/PDE_Gottlieb/: EqOnde.cpp  Frame_1.h  Main.cpp  dati.h  draw.cpp  draw.h  form.cpp  utili.cpp  utili.h
src/PDE_KDV/: Frame_1.cpp  KDV.cpp  Main.cpp  draw.cpp  form.cpp  guicon.cpp
src/Robby/: draw.cpp  draw.h  form.cpp  frame.cpp  frame.h  includes.h  main_grafica.cpp  robby.cpp  robby.h
